# floppy-full-repo

floppy-contracts/: .gitignore  etherjsDemo.js  eventTracker.js  foundry.toml  getDistributedEvents.js  getForgeCompleteEvent.js  package.json  remappings.txt
floppy-contracts/.github/workflows/: build.yml
floppy-contracts/deployments/ronin-testnet/: FLPLogic.json  FLPProxy.json  FloppyGambleLogic.json  FloppyGambleProxy.json  FloppyVaultLogic.json  FloppyVaultProxy.json  exported_address
floppy-contracts/script/: GeneralConfig.sol  Migration.s.sol  Test.sol
floppy-contracts/script/20240910-deploy-flp-vault/: 20240910_Deploy_FLP_Vault.s.sol
floppy-contracts/script/20240914-gamble-deploy/: 20240914_Deploy_And_Whitelist_Gamble.s.sol
floppy-contracts/script/20241509-upgrade-gamble/: 20241509_Upgrade_Gamble.sol
floppy-contracts/script/ccip/: DeployTokensManager.s.sol
floppy-contracts/script/contracts/: FLPDeploy.s.sol  FloppyGambleDeploy.s.sol  FloppyVaultDeploy.s.sol
floppy-contracts/script/interfaces/: ISharedArgument.sol
floppy-contracts/src/: BirdMarketPlace.sol  FLPCrowdSale.sol  FLoppyGamble.sol  FloppyVault.sol  SRS.docx
floppy-server/: Cargo.toml  sample_data.sql
floppy-server/abi/: FloppyGamble.json  FloppyVault.json  addresses.txt
floppy-server/migrations/: 01_create_table.sql
floppy-server/src/: bets_syncer.rs  event_listener.rs  main.rs  models.rs  signer.rs  state.rs
floppy-server/src/db/: bet_record.rs  match_record.rs  mod.rs
floppy-server/src/router/: bet_record.rs  match_record.rs  mod.rs  signer.rs
(+36 files in other folders)
