[package]
name = "floppy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
eyre = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-rpc-types = { workspace = true }
warp = { workspace = true }



[workspace.dependencies]
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "0.3", features = ["full"] }
eyre = { version = "0.6" }
actix-web = { version = "4.5.0" }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
warp = "0.3"
alloy-primitives = "0.6"
alloy-rpc-client = "0.6"
alloy-transport-http = "0.6"
alloy-json-rpc = "0.6"
alloy-rpc-types = "0.6"